--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,2 @@
-logging.level.org.springframework.boot.actuate.trace=TRACE
-management.endpoints.web.exposure.include=*
+spring.main.banner-mode=off
+logging.level.com.atomikos=ERROR
